--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", bra
 sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
 sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
 sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
+sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
 sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
 sp-session = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
 sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
@@ -83,8 +84,8 @@ polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot.git",
 polkadot-service = { git = "https://github.com/paritytech/polkadot.git", branch = "seun-babe-manual-seal" }
 polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot.git", branch = "seun-babe-manual-seal" }
 
-new-polkadot-runtime = { git = "https://github.com/paritytech/polkadot.git", branch = "apopiak-bump-versions", package = "polkadot-runtime" }
-new-frame-system = { git = "https://github.com/paritytech/substrate.git", tag = "polkadot-0-8-25-dep", package = "frame-system" }
-new-frame-support = { git = "https://github.com/paritytech/substrate.git", tag = "polkadot-0-8-25-dep", package = "frame-support" }
-new-sp-core = { git = "https://github.com/paritytech/substrate.git", tag = "polkadot-0-8-25-dep", package = "sp-core" }
-new-pallet-balances = { git = "https://github.com/paritytech/substrate.git", tag = "polkadot-0-8-25-dep", package = "pallet-balances" }
+#new-polkadot-runtime = { git = "https://github.com/paritytech/polkadot.git", branch = "apopiak-bump-versions", package = "polkadot-runtime" }
+#new-frame-system = { git = "https://github.com/paritytech/substrate.git", tag = "polkadot-0-8-25-dep", package = "frame-system" }
+#new-frame-support = { git = "https://github.com/paritytech/substrate.git", tag = "polkadot-0-8-25-dep", package = "frame-support" }
+#new-sp-core = { git = "https://github.com/paritytech/substrate.git", tag = "polkadot-0-8-25-dep", package = "sp-core" }
+#new-pallet-balances = { git = "https://github.com/paritytech/substrate.git", tag = "polkadot-0-8-25-dep", package = "pallet-balances" }
