--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ jsonrpc-core-client = { version = "15.1", features = ["ws"] }
 jsonrpc-core = "15.1"
 tokio-compat = { version = "0.1.6", features = ["rt-full"] }
 url = "1.7"
+pbr = "1.0.3"
 
 [dev-dependencies]
 hex = "0.4.2"
