--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,76 +1,56 @@
 [package]
 name = "substrate-test-runner"
-version = "0.1.0"
-authors = ["Tomasz Drwięga <tomusdrw@gmail.com>"]
+version = "0.8.0"
+authors = ["Parity Technologies <admin@parity.io>"]
 edition = "2018"
 
 [dependencies]
 # client deps
-sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-informant = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-client-db = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-manual-seal = { package = "sc-consensus-manual-seal", git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
+sc-executor = { version = "0.8.0", path = "../../client/executor" }
+sc-service = { version = "0.8.0", path = "../../client/service" }
+sc-informant = { version = "0.8.0", path = "../../client/informant" }
+sc-network = { version = "0.8.0", path = "../../client/network" }
+sc-cli = { version = "0.8.0", path = "../../client/cli" }
+sc-basic-authorship = { version = "0.8.0", path = "../../client/basic-authorship" }
+sc-rpc = { version = "2.0.0", path = "../../client/rpc" }
+sc-transaction-pool = { version = "2.0.0", path = "../../client/transaction-pool" }
+sc-transaction-graph = { version = "2.0.0", path = "../../client/transaction-pool/graph" }
+sc-client-api = { version = "2.0.0", path = "../../client/api" }
+sc-rpc-server = { version = "2.0.0", path = "../../client/rpc-servers" }
+manual-seal = { package = "sc-consensus-manual-seal", version = "0.8.0", path = "../../client/consensus/manual-seal" }
 
 # primitive deps
-sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-session = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-externalities = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-sp-storage = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
+sp-core = { version = "2.0.0", path = "../../primitives/core" }
+sp-blockchain = { version = "2.0.0", path = "../../primitives/blockchain" }
+sp-block-builder = { version = "2.0.0", path = "../../primitives/block-builder" }
+sp-api = { version = "2.0.0", path = "../../primitives/api" }
+sp-io = { version = "2.0.0", path = "../../primitives/io" }
+sp-transaction-pool = { version = "2.0.0", path = "../../primitives/transaction-pool" }
+sp-consensus = { version = "0.8.0", path = "../../primitives/consensus/common" }
+sp-keystore = { version = "0.8.0", path = "../../primitives/keystore" }
+sp-runtime = { version = "2.0.0", path = "../../primitives/runtime" }
+sp-session = { version = "2.0.0", path = "../../primitives/session" }
+sp-offchain = { version = "2.0.0", path = "../../primitives/offchain" }
+sp-inherents = { version = "2.0.0", path = "../../primitives/inherents" }
+sp-keyring = { version = "2.0.0", path = "../../primitives/keyring" }
+
+sp-externalities = { version = "0.8.0", path = "../../primitives/externalities" }
+sp-state-machine = { version = "0.8.0", path = "../../primitives/state-machine" }
+sp-wasm-interface = { version = "2.0.0", path = "../../primitives/wasm-interface" }
+sp-runtime-interface = { version = "2.0.0", path = "../../primitives/runtime-interface" }
 
 # pallets
-frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-pallet-indices = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-finality-grandpa = "0.12.3"
+frame-system = { version = "2.0.0", path = "../../frame/system" }
 
 parity-scale-codec = "1.3.1"
-structopt = "0.3.15"
 env_logger = "0.7.1"
 log = "0.4.8"
-hyper = "0.12.35"
-serde_json = "1.0"
-derive_more = "0.99.9"
 futures01 = { package = "futures", version = "0.1.29" }
 futures = { package = "futures", version = "0.3", features = ["compat"] }
 rand = "0.7"
-parking_lot = "0.10"
 tokio = { version = "0.2", features = ["full"] }
 
 # Calling RPC
-jsonrpc-core-client = { version = "14.2", features = ["ws"] }
-jsonrpc-core = "14.2"
-jsonrpc-pubsub = "14.2"
+jsonrpc-core-client = { version = "15.1", features = ["ws"] }
+jsonrpc-core = "15.1"
 tokio-compat = { version = "0.1.6", features = ["rt-full"] }
-url = "1.7"
-primitive-types = "0.7"
-
-node-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-node-cli = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-
-[dev-dependencies]
-node-primitives = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
-node-executor = { git = "https://github.com/paritytech/substrate.git", branch = "seun-babe-manual-seal" }
