--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,46 +1,44 @@
 [package]
 name = "substrate-test-runner"
-version = "0.8.0"
-authors = ["Parity Technologies <admin@parity.io>"]
+version = "0.1.0"
+authors = ["Tomasz Drwięga <tomusdrw@gmail.com>", "Seun Lanlege <seunlanlege@gmail.com>"]
 edition = "2018"
 
 [dependencies]
 # client deps
-sc-executor = { version = "0.8.0", path = "../../client/executor" }
-sc-service = { version = "0.8.0", path = "../../client/service" }
-sc-informant = { version = "0.8.0", path = "../../client/informant" }
-sc-network = { version = "0.8.0", path = "../../client/network" }
-sc-cli = { version = "0.8.0", path = "../../client/cli" }
-sc-basic-authorship = { version = "0.8.0", path = "../../client/basic-authorship" }
-sc-rpc = { version = "2.0.0", path = "../../client/rpc" }
-sc-transaction-pool = { version = "2.0.0", path = "../../client/transaction-pool" }
-sc-transaction-graph = { version = "2.0.0", path = "../../client/transaction-pool/graph" }
-sc-client-api = { version = "2.0.0", path = "../../client/api" }
-sc-rpc-server = { version = "2.0.0", path = "../../client/rpc-servers" }
-manual-seal = { package = "sc-consensus-manual-seal", version = "0.8.0", path = "../../client/consensus/manual-seal" }
+sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sc-informant = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sc-transaction-graph = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sc-rpc-server = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+manual-seal = { package = "sc-consensus-manual-seal", git = "https://github.com/paritytech/substrate.git", branch = "master" }
 
 # primitive deps
-sp-core = { version = "2.0.0", path = "../../primitives/core" }
-sp-blockchain = { version = "2.0.0", path = "../../primitives/blockchain" }
-sp-block-builder = { version = "2.0.0", path = "../../primitives/block-builder" }
-sp-api = { version = "2.0.0", path = "../../primitives/api" }
-sp-io = { version = "2.0.0", path = "../../primitives/io" }
-sp-transaction-pool = { version = "2.0.0", path = "../../primitives/transaction-pool" }
-sp-consensus = { version = "0.8.0", path = "../../primitives/consensus/common" }
-sp-keystore = { version = "0.8.0", path = "../../primitives/keystore" }
-sp-runtime = { version = "2.0.0", path = "../../primitives/runtime" }
-sp-session = { version = "2.0.0", path = "../../primitives/session" }
-sp-offchain = { version = "2.0.0", path = "../../primitives/offchain" }
-sp-inherents = { version = "2.0.0", path = "../../primitives/inherents" }
-sp-keyring = { version = "2.0.0", path = "../../primitives/keyring" }
-
-sp-externalities = { version = "0.8.0", path = "../../primitives/externalities" }
-sp-state-machine = { version = "0.8.0", path = "../../primitives/state-machine" }
-sp-wasm-interface = { version = "2.0.0", path = "../../primitives/wasm-interface" }
-sp-runtime-interface = { version = "2.0.0", path = "../../primitives/runtime-interface" }
+sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-session = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-externalities = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-state-machine = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-wasm-interface = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
 
 # pallets
-frame-system = { version = "2.0.0", path = "../../frame/system" }
+frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
 
 parity-scale-codec = "1.3.1"
 env_logger = "0.7.1"
