--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,3 +52,8 @@ tokio = { version = "0.2", features = ["full"] }
 jsonrpc-core-client = { version = "15.1", features = ["ws"] }
 jsonrpc-core = "15.1"
 tokio-compat = { version = "0.1.6", features = ["rt-full"] }
+
+[dev-dependencies]
+node-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+node-cli = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
+sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
